created basephotos.css for styling, registered it in the app settings, made all h1 headings blue

--- a/photos/templates/welcome.html
+++ b/photos/templates/welcome.html
@@ -1,8 +1,8 @@
 {%extends 'base.html'%}
 
 
-<!--{% block content %}-->
+{% block content %}
 
 <h1>Welcome to my Gallery</h1>
 
-<!--{% endblock %}-->
+{% endblock %}
