--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -13,18 +13,18 @@
 
   {% block styles %}
     {% bootstrap_css %}
-    <!--<link rel="stylesheet" href="{% static 'css/basephotos.css' %}">-->
+    <link rel="stylesheet" href="{% static 'css/basephotos.css' %}">
   {% endblock %}
 
 </head>
 <body>
     {% include "navbar.html" %}
 
-    <!--{% block content %} <h1 class='text-center'>News for {{date|date:"l d-F Y"}}</h1> {%endblock%}-->
+    {% block content %} <h1 class='text-center'>News for {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
-    <!--{% block scripts %}-->
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-     <!--{% bootstrap_javascript %}-->
-    <!--{% endblock %}-->
+    {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     {% bootstrap_javascript %}
+    {% endblock %}
 </body>
 </html>
