added a function to past-images.html template that allows users to view images of previous days

--- a/photos/templates/all-images/today-images.html
+++ b/photos/templates/all-images/today-images.html
@@ -12,7 +12,7 @@
   <div class="row">
     <!-- displaying Details -->
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <h2 class="text-center"> {{ image.title }} </h2>
+      <h2 class="text-center"> {{ image.name }} </h2>
         <p class="text-center">{{image.description}} </p>
     </div>
     <!--Display Image  -->
