created thumbnail class that holds each image rendered to the templates after the function loops through image in images. Displayed more image details to the image.html template that allows users to view additional information after they click on an image

--- a/photos/templates/all-images/today-images.html
+++ b/photos/templates/all-images/today-images.html
@@ -13,11 +13,13 @@
     <!-- displaying Details -->
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
       <h2 class="text-center"> {{ image.name }} </h2>
-      <a href="/image/{{image.id}}" class="text-center">{{image.description}} </a>
+      <a href="/image/{{image.id}}" class="text-center">{{image.location}} </a>
     </div>
     <!--Display Image  -->
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <img src="{{image.image.url}}" class="img-responsive" alt="Image">
+      <div class="thumbnail">
+        <img src="{{image.image.url}}" class="img-responsive" alt="Image">
+      </div>
     </div>
 
   </div>
