--- a/photos/templates/all-images/image.html
+++ b/photos/templates/all-images/image.html
@@ -9,16 +9,28 @@
    </div>
 
    <div class="row">
-     <h1 class="text-center">{{image.name}}</h1>
+       <img src="{{image.image.url}}" class="img-responsive" alt="Image">
+
    </div>
 
    <div class="row">
-     <p>{{image.description}}</p>
+       <h3 class="text-center">{{image.name}}</h3>
    </div>
 
+     <div class="row">
+         <p class="text-center">{{image.description}}</p>
+    </div>
+
    <div class="row">
-     <p>Posted {{image.pub_date|timesince}} </p>
+     <p class="text-center">Posted {{image.pub_date|timesince}} </p>
    </div>
+     <div class="row">
+         <h4 class="text-center">{{image.location}}</h4>
+    </div>
+     <div class="row">
+         <h4 class="text-center">{{image.category}}</h4>
+    </div>
+
 
  </div>
 
