--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'welcome' %}">My Personal Gallery</a>
+      <a class="navbar-brand" href="{% url 'image' %}">My Personal Gallery</a>
 <!-- Adding a search form  -->
       <div class="col-sm-4 col-md-4 navbar-right">
 
