--- a/photos/templates/all-images/image.html
+++ b/photos/templates/all-images/image.html
@@ -4,13 +4,10 @@
 
  <div class="container">
 
-   <div class="row">
-     <img src="{{image.image_image.url}}"  class="img-responsive" alt="">
-   </div>
 
    <div class="row">
-       <div class="jumbotron">
-       <img src="{{image.image.url}}" class="img-responsive" alt="Image">
+       <div class="jumbotrons">
+       <img src="{{image.image.url}}" class="img-responsive" alt="Image" style="width:70%; align:center;">
        </div>
 
    </div>
