changed the navbar background to light green

--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<nav class="navbar navbar-inverse" style="background-color:brown; height: 100px;">
+<nav class="navbar navbar-inverse" style="background-color:#5a5600; height: 100px;">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'image' %}">My Personal Gallery</a>
