--- a/photos/templates/all-images/today-images.html
+++ b/photos/templates/all-images/today-images.html
@@ -5,26 +5,26 @@
 
 
 <div class="container">
-
+<div class="row">
   <!-- Looping through images   -->
   {% for image in images %}
 
-  <div class="row">
+
       <!--Display Image  -->
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" id="">
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
         <div class="thumbnail" style="width:50%;">
             <a href="/image/{{image.id}}" class="text-center"> <img style="float:left;" src="{{image.image.url}}" class="img-responsive" alt="Image"></a>
 
       </div>
     </div>
     <!-- displaying Details -->
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
-        <p><h4 style="color: green;"> Image Name:</h4> {{ image.name }} </p>
-        <p> <h4 style="color: blue;">Image Category:</h4> {{ image.category }} </p>
-        <p> <h4 style="color: blue;">Image Location:</h4> {{ image.location }} </p>
-    </div>
+    <!--<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >-->
+        <!--<p><h4 style="color: green;"> Image Name:</h4> {{ image.name }} </p>-->
+        <!--<p> <h4 style="color: blue;">Image Category:</h4> {{ image.category }} </p>-->
+        <!--<p> <h4 style="color: blue;">Image Location:</h4> {{ image.location }} </p>-->
+    <!--</div>-->
 
-  </div>
+
 
   {% empty %}
   <div class="row">
@@ -32,6 +32,7 @@
   </div>
   {% endfor %}
 
+</div>
 </div>
 
 
