--- a/photos/templates/all-images/image.html
+++ b/photos/templates/all-images/image.html
@@ -6,46 +6,53 @@
 
 
    <div class="row">
+       <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
        <div class="jumbotrons">
-       <img src="{{image.image.url}}" class="img-responsive" alt="Image" style="width:70%; align:center;">
+       <img src="{{image.image.url}}" class="img-responsive" alt="Image" style="width:90%; align:center;">
        </div>
 
    </div>
 
+       <h2>Image Details</h2>
+
+       <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+
    <div class="row">
-       <div class="thumbnail">
-       <h3 class="text-center">Image Name:</h3>
-       <h6 class="text-center">{{image.name}}</h6>
+       <div class="thumbnail" style="background-color:#5a5600; color:white;">
+       <h5 class="text-center">Image Name:</h5>
+       <hp class="text-center">{{image.name}}</hp>
        </div>
    </div>
 
      <div class="row">
-         <div class="thumbnail">
-         <h3 class="text-center">Description:</h3>
+         <div class="thumbnail" style="background-color:#5a5600; color:white;">
+         <h5 class="text-center">Description:</h5>
              <p class="text-center"> {{image.description}}</p>
          </div>
     </div>
 
    <div class="row">
-       <div class="thumbnail">
-           <h3 class="text-center">Time Posted:</h3>
+       <div class="thumbnail" style="background-color:#5a5600; color:white;">
+           <h5 class="text-center">Time Posted:</h5>
      <p class="text-center">Posted {{image.pub_date|timesince}} </p>
        </div>
    </div>
      <div class="row">
-         <div class="thumbnail">
-         <h3 class="text-center">Image Location:</h3>
+         <div class="thumbnail" style="background-color:#5a5600; color:white;">
+         <h5 class="text-center">Image Location:</h5>
          <h6 class="text-center">Location: {{image.location}}</h6>
          </div>
     </div>
      <div class="row">
-         <div class="thumbnail">
-         <h3 class="text-center">Image Category:</h3>
+         <div class="thumbnail" style="background-color:#5a5600; color:white;">
+         <h5 class="text-center">Image Category:</h5>
          <h6 class="text-center">Category: {{image.category}}</h6>
          </div>
     </div>
+ </div>
 
 
  </div>
 
  {% endblock %}
+ </div>
