--- a/photos/templates/all-images/image.html
+++ b/photos/templates/all-images/image.html
@@ -49,10 +49,36 @@
          <h6 class="text-center">Category: {{image.category}}</h6>
          </div>
     </div>
+
+
+           <a onclick="copyLink({{image.id}})"><button type="button" class="btn btn-outline-warning my-2 my-sm-0 link-btn">Copy image Link</button></a>
+              <input class="form-control" type="text" value="http://127.0.0.1:8000{{image.image.url}}" id="thislinkhere-{{image.id}}">
+              <a ></a>
+
+
  </div>
 
 
  </div>
+
+ </div>
+
+<script>
+    function copyLink(id) {
+      /* Get the text field */
+      var copyText = document.getElementById( "thislinkhere-" + id );
+
+      /* Select the text field */
+      copyText.select();
+
+      /* Copy the text inside the text field */
+      document.execCommand( "copy" );
+
+      /* Alert the copied text */
+      alert( "Do you want to share this link?: " + copyText.value );
+    }
+  </script>
+
 
  {% endblock %}
- </div>
+
